responsive web design 1

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>Great Idea - Responsive I</title>
@@ -11,6 +12,92 @@
 </head>
 
 <body>
-<!-- Use past code you created here for Great Idea Web Page or past solution for Great Idea Web Page HTML here! -->
+  <!-- Use past code you created here for Great Idea Web Page or past solution for Great Idea Web Page HTML here! -->
+
+  <section class="nav-box">
+    <nav>
+      <div>
+      <a href="services.html" class="nav-box">Services</a>
+      <a href="#product" class="nav-box">Product</a>
+      <a href="#vision" class="nav-box">Vision</a>
+      <a href="#features" class="nav-box">Features</a>
+      <a href="#about" class="nav-box">About</a>
+      <a href="#contact" class="nav-box">Contact</a>
+      </div>
+      <img class="logo nav-box" src="img/logo.png" alt="Great Idea! Company logo.">
+    </nav>
+  </section>
+  <br>
+
+  <section class="box" style="justify-content: space-evenly;">
+    <div id="slogan-box">
+      <h1 class="slogan">
+        Innovation <br>
+        On <br>
+        Demand <br>
+      </h1>
+      <p class="getstarted">Get Started</p>
+    </div>
+    <div class="box header-img">
+      <img src="img/header-img.png" alt="Image of a code snippet.">
+    </div>
+  </section>
+
+  <hr>
+
+  <section class="box">
+    <div class="box-column">
+      <h2 id="features">Features</h2>
+      <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
+        Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+      </p>
+    </div>
+    <div class="box-column">
+      <h2 id="about">About</h2>
+      <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
+        Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+      </p>
+    </div>
+  </section>
+  <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
+
+  <section class="box">
+    <div class="box-column">
+      <h2 id="services">Services</h2>
+      <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
+        Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+      </p>
+    </div>
+    <div class="box-column">
+      <h2 id="product">Product</h2>
+      <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
+        Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+      </p>
+    </div>
+    <div class="box-column">
+      <h2 id="product">Vision</h2>
+      <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
+        Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+      </p>
+    </div>
+  </section>
+  <hr>
+
+  <section class="box-column">
+      <h2 id="contact">Contact</h2>
+      <address>
+        <br>
+        123 Way 456 Street <br>
+        Somewhere, USA <br> <br>
+        1 (888) 888-8888<br> <br>
+        <a href="https://sales@greatidea.io">sales@greatidea.io</a> <br>
+      </address>
+  </section>
+  <footer>
+    Copyright Great Idea! 2018
+  </footer>
+
 </body>
+
 </html>
+
