--- a/services.html
+++ b/services.html
@@ -22,13 +22,13 @@
       <div>
         <a href="services.html" class="nav-box">Services</a>
         <a href="#product" class="nav-box">Product</a>
-        <a href="#vision" class="nav-box">Vision</a>
+        <a href="index.html" class="nav-box">Vision</a>
         <a href="#features" class="nav-box">Features</a>
         <a href="#about" class="nav-box">About</a>
         <a href="#contact" class="nav-box">Contact</a>
-        <a href="index.html"><img class="logo" src="img/logo.png" alt="Great Idea! Company logo."></a>
       </div>
-    </nav>
+      <img link="index.html" class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
+   </nav>
 
   </section>
   <br>
